# control-bot

./: .env.example  .gitignore  Dockerfile  README.md  can.html  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: client.py  common.py  keyboards.py  states.py
bot/handlers/: __init__.py  channels.py  menu.py  replies.py
coach/: __init__.py  handlers.py  models.py  motivation.py  queries.py  reports.py  scheduler.py
db/: engine.py  kaworai.py  migrations.py  models.py  queries.py
scripts/: create_session.py
userbot/: client.py  handlers.py  matcher.py  rules.py
